--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,9 +6,9 @@
     --color-dark-100: #312d37;
     --color-dark-900: #000;
 
-    --color-purple-50: #7c3aed;
-    --color-purple-100: #a855f7;
-    --color-purple-200: #bf46ef;
+    --color-purple-50: #6DA9E4;
+    --color-purple-100: #19A7CE;
+    --color-purple-200: #146C94;
 
     --color-gradient: linear-gradient(90deg, var(--color-purple-50), var(--color-purple-100), var(--color-purple-200));
 }
